Fix centering to work on mobile.

--- a/src/main/webapp/css/life.css
+++ b/src/main/webapp/css/life.css
@@ -6,6 +6,12 @@ html, body {
     position: relative;
 }
 
+#page {
+    height: 100%;
+    width: 100%;
+    display: table;
+}
+
 .no-close .ui-dialog-titlebar-close
 {
     display: none;
@@ -16,12 +22,14 @@ html, body {
 }
 
 /* lifeView */
+#lifeView {
+    display: table-cell;
+    height: 100%;
+    vertical-align: middle;
+}
 
 #lifeViewPanel {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: auto;
 }
 
 #lifeViewPanel td, #lifeViewPanel {
